fix spacing on header and LocationSearch alignment

--- a/frontend/src/styles/base/_reset.scss
+++ b/frontend/src/styles/base/_reset.scss
@@ -13,9 +13,8 @@ body {
 
 h1 {
     font-family: $primary-font-family;
-    letter-spacing: 9px;
+    letter-spacing: 5px;
     font-weight: normal;
     font-size: 96px;
     margin: auto;
-
 }
