--- a/frontend/src/styles/layout/_app.scss
+++ b/frontend/src/styles/layout/_app.scss
@@ -2,6 +2,4 @@
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(7, 1fr);
-    grid-row-gap: 0.5rem;
-    grid-column-gap: 0.5rem;
 }
